--- a/cases/index.html
+++ b/cases/index.html
@@ -472,7 +472,7 @@
 <a href="/marusan-site/cases">搬入運搬事例</a>
 </li>
 <li>
-<a href="/marusan-site/staff">人材育成</a>
+<a href="/marusan-site/staff/">人材育成</a>
 </li>
 <li class="u_visible_pc">
 <a href="#">車両・設備紹介</a>
@@ -491,6 +491,7 @@
 </div>
 </div>
 </li>
+
 <li class="u_visible_sp">
 <a href="/marusan-site/warehouse">設備紹介（保有倉庫）</a>
 </li>
@@ -539,16 +540,16 @@
                     </h2>
                 </div>
                 <figure>
-                    <img src="img/mv_case.jpg" alt="" class="u_switch_img">
+                    <img src="img/mv_case.webp" alt="" class="u_switch_img">
                 </figure>
             </div>
             <div class="u_inner">
                 <div class="list_wrap">
                     <div class="sphide widefit">
-                                    <img  src="img/img-slide2.jpg" class="attachment-medium size-medium wp-post-image" alt="" decoding="async" loading="lazy"/>
+                                    <img  src="img/img-slide2.webp" class="attachment-medium size-medium wp-post-image" alt="" decoding="async" loading="lazy"/>
                                     </div>
                                     <div class="pchide widefit">
-                                    <img src="img/sp_img-slide2.jpg" class="attachment-medium size-medium wp-post-image" alt="" decoding="async" loading="lazy"/>
+                                    <img src="img/sp_img-slide2.webp" class="attachment-medium size-medium wp-post-image" alt="" decoding="async" loading="lazy"/>
                                     </div>
                     <div class="list">
                         
@@ -558,10 +559,10 @@
                                 <a>
 
                                     <div class="sphide">
-                                    <img width="525" height="700" src="img/pc_reizouko.jpg" class="attachment-medium size-medium wp-post-image" alt="" decoding="async" loading="lazy"/>
+                                    <img width="525" height="700" src="img/pc_reizouko.webp" class="attachment-medium size-medium wp-post-image" alt="" decoding="async" loading="lazy"/>
                                     </div>
                                     <div class="pchide">
-                                    <img width="525" height="700" src="img/sp_reizouko.jpg" class="attachment-medium size-medium wp-post-image" alt="" decoding="async" loading="lazy"/>
+                                    <img width="525" height="700" src="img/sp_reizouko.webp" class="attachment-medium size-medium wp-post-image" alt="" decoding="async" loading="lazy"/>
                                     </div>
                                     <p>
                                         <i>厨房機器</i>
@@ -573,10 +574,10 @@
                                 <a>
 
                                     <div class="sphide">
-                                    <img width="525" height="700" src="img/imagekumitate.jpg" class="attachment-medium size-medium wp-post-image" alt="" decoding="async" loading="lazy"/>
+                                    <img width="525" height="700" src="img/imagekumitate.webp" class="attachment-medium size-medium wp-post-image" alt="" decoding="async" loading="lazy"/>
                                     </div>
                                     <div class="pchide">
-                                    <img width="525" height="700" src="img/imagekumitate_sp.jpg" class="attachment-medium size-medium wp-post-image" alt="" decoding="async" loading="lazy"/>
+                                    <img width="525" height="700" src="img/imagekumitate_sp.webp" class="attachment-medium size-medium wp-post-image" alt="" decoding="async" loading="lazy"/>
                                     </div>
                                     <p>
                                         <i>スーパー用オープンケース設置工事</i>
@@ -588,10 +589,10 @@
                                 <a>
 
                                     <div class="sphide">
-                                    <img width="525" height="700" src="img/imagekumitate01.jpg" class="attachment-medium size-medium wp-post-image" alt="" decoding="async" loading="lazy"/>
+                                    <img width="525" height="700" src="img/imagekumitate01.webp" class="attachment-medium size-medium wp-post-image" alt="" decoding="async" loading="lazy"/>
                                     </div>
                                     <div class="pchide">
-                                    <img width="525" height="700" src="img/imagekumitate01_sp.jpg" class="attachment-medium size-medium wp-post-image" alt="" decoding="async" loading="lazy"/>
+                                    <img width="525" height="700" src="img/imagekumitate01_sp.webp" class="attachment-medium size-medium wp-post-image" alt="" decoding="async" loading="lazy"/>
                                     </div>
                                     <p>
                                         <i>フラワーキーパー移設工事</i>
@@ -603,10 +604,10 @@
                                 <a>
 
                                     <div class="sphide">
-                                    <img width="525" height="700" src="img/imagekumitate03.jpg" class="attachment-medium size-medium wp-post-image" alt="" decoding="async" loading="lazy"/>
+                                    <img width="525" height="700" src="img/imagekumitate03.webp" class="attachment-medium size-medium wp-post-image" alt="" decoding="async" loading="lazy"/>
                                     </div>
                                     <div class="pchide">
-                                    <img width="525" height="700" src="img/imagekumitate03_sp.jpg" class="attachment-medium size-medium wp-post-image" alt="" decoding="async" loading="lazy"/>
+                                    <img width="525" height="700" src="img/imagekumitate03_sp.webp" class="attachment-medium size-medium wp-post-image" alt="" decoding="async" loading="lazy"/>
                                     </div>
                                     <p>
                                         <i>【高冷凍機の据付】ビルの屋上での据付作業事</i>
@@ -618,10 +619,10 @@
                                 <a>
 
                                     <div class="sphide">
-                                    <img width="525" height="700" src="img/imagekumitate04.jpg" class="attachment-medium size-medium wp-post-image" alt="" decoding="async" loading="lazy"/>
+                                    <img width="525" height="700" src="img/imagekumitate04.webp" class="attachment-medium size-medium wp-post-image" alt="" decoding="async" loading="lazy"/>
                                     </div>
                                     <div class="pchide">
-                                    <img width="525" height="700" src="img/imagekumitate04_sp.jpg" class="attachment-medium size-medium wp-post-image" alt="" decoding="async" loading="lazy"/>
+                                    <img width="525" height="700" src="img/imagekumitate04_sp.webp" class="attachment-medium size-medium wp-post-image" alt="" decoding="async" loading="lazy"/>
                                     </div>
                                     <p>
                                         <i>プレハブ冷蔵庫組み立て工事</i>
@@ -633,10 +634,10 @@
                                 <a>
 
                                     <div class="sphide">
-                                    <img width="525" height="700" src="img/imagekumitate05.jpg" class="attachment-medium size-medium wp-post-image" alt="" decoding="async" loading="lazy"/>
+                                    <img width="525" height="700" src="img/imagekumitate05.webp" class="attachment-medium size-medium wp-post-image" alt="" decoding="async" loading="lazy"/>
                                     </div>
                                     <div class="pchide">
-                                    <img width="525" height="700" src="img/imagekumitate05_sp.jpg" class="attachment-medium size-medium wp-post-image" alt="" decoding="async" loading="lazy"/>
+                                    <img width="525" height="700" src="img/imagekumitate05_sp.webp" class="attachment-medium size-medium wp-post-image" alt="" decoding="async" loading="lazy"/>
                                     </div>
                                     <p>
                                         <i>水槽の運送搬入</i>
@@ -677,16 +678,16 @@
 <a href="/marusan-site/service/">事業案内</a>
 </li>
 <li>
-<a href="/marusan-site/cases">搬入運搬事例</a>
+<a href="/marusan-site/cases/">搬入運搬事例</a>
 </li>
 <li>
 <a href="/marusan-site/staff/">人材育成</a>
 </li>
 <li>
-<a href="/marusan-site/contact/">車両設備紹介</a>
+<a href="/marusan-site/vehicle">車両設備紹介</a>
 </li>
 <li>
-<a href="/marusan-site/company/">SDGs</a>
+<a href="/marusan-site/sdgs/">SDGs</a>
 </li>
 <li>
 <a href="/marusan-site/workflow/">お仕事の流れ</a>
