--- a/service/index.html
+++ b/service/index.html
@@ -469,10 +469,10 @@
 </div>
 </li>
 <li>
-<a href="/marusan-site/cases">搬入運搬事例</a>
+<a href="/marusan-site/cases/">搬入運搬事例</a>
 </li>
 <li>
-<a href="/marusan-site/staff">人材育成</a>
+<a href="/marusan-site/staff/">人材育成</a>
 </li>
 <li class="u_visible_pc">
 <a href="#">車両・設備紹介</a>
