--- a/service/index.html
+++ b/service/index.html
@@ -539,7 +539,7 @@
                     </h2>
                 </div>
                 <figure>
-                    <img src="img/service_mv_img.jpg" alt="" class="u_switch_img">
+                    <img src="img/service_mv_img.webp" alt="" class="u_switch_img">
                 </figure>
             </div>
             <div class="u_inner">
@@ -568,7 +568,7 @@
                                 </dd>
                             </dl>
                             <figure>
-                                <img src="img/service_img01.jpg" alt="" class="u_switch_img">
+                                <img src="img/service_img01.webp" alt="" class="u_switch_img">
                             </figure>
                         </li>
                         <li>
@@ -586,7 +586,7 @@
                                 </dd>
                             </dl>
                             <figure>
-                                <img src="img/service_img02.jpg" alt="" class="u_switch_img">
+                                <img src="img/service_img02.webp" alt="" class="u_switch_img">
                             </figure>
                         </li>
                         <li>
@@ -602,7 +602,7 @@
                                 </dd>
                             </dl>
                             <figure>
-                                <img src="img/service_img03.jpg" alt="" class="u_switch_img">
+                                <img src="img/service_img03.webp" alt="" class="u_switch_img">
                             </figure>
                         </li>
               
@@ -621,8 +621,8 @@
                         <li>
                             <a>
                                 <figure>
-                                    <img src="img/service_nav01.jpg" alt="" class="u_switch_img">
-                                    <img src="img/service_nav01a.jpg" alt="" class="u_switch_img">
+                                    <img src="img/service_nav01.webp" alt="" class="u_switch_img">
+                                    <img src="img/service_nav01a.webp" alt="" class="u_switch_img">
                                 </figure>
                                 <dl>
                                     <dt>重量物運搬据付</dt>
@@ -635,8 +635,8 @@
                         <li>
                             <a>
                                 <figure>
-                                    <img src="img/service_nav01b.jpg" alt="" class="u_switch_img">
-                                    <img src="img/service_nav01c.jpg" alt="" class="u_switch_img">
+                                    <img src="img/service_nav01b.webp" alt="" class="u_switch_img">
+                                    <img src="img/service_nav01c.webp" alt="" class="u_switch_img">
                                 </figure>
                                 <dl>
                                     <dt>据付後の設備工事、各種工事</dt>
@@ -649,8 +649,8 @@
                         <li>
                             <a>
                                 <figure>
-                                    <img src="img/service_nav01d.jpg" alt="" class="u_switch_img">
-                                    <img src="img/service_nav01e.jpg" alt="" class="u_switch_img">
+                                    <img src="img/service_nav01d.webp" alt="" class="u_switch_img">
+                                    <img src="img/service_nav01e.webp" alt="" class="u_switch_img">
                                 </figure>
                                 <dl>
                                     <dt>保管・修理・保守</dt>
@@ -663,8 +663,8 @@
                        <li>
                             <a>
                                 <figure>
-                                    <img src="img/service_nav01f.jpg" alt="" class="u_switch_img">
-                                    <img src="img/service_nav01g.jpg" alt="" class="u_switch_img">
+                                    <img src="img/service_nav01f.webp" alt="" class="u_switch_img">
+                                    <img src="img/service_nav01g.webp" alt="" class="u_switch_img">
                                 </figure>
                                 <dl>
                                     <dt>解体・撤去・廃棄</dt>
