--- a/staff/index.html
+++ b/staff/index.html
@@ -494,28 +494,28 @@
 </div>
 </li>
 <li class="u_visible_sp">
-<a href="/marusan-site/service/warehouse">設備紹介（保有倉庫）</a>
+<a href="/marusan-site/warehouse">設備紹介（保有倉庫）</a>
 </li>
 <li class="u_visible_sp">
-<a href="/marusan-site/service/vehicle">設備紹介（保有車両）</a>
+<a href="/marusan-site/vehicle">設備紹介（保有車両）</a>
 </li>
 <li>
-<a href="/marusan-site/service/sdgs/">SDGs</a>
+<a href="/marusan-site/sdgs/">SDGs</a>
 </li>
 <li>
-<a href="/marusan-site/service/workflow/">お仕事の流れ</a>
+<a href="/marusan-site/workflow/">お仕事の流れ</a>
 </li>
 <li>
-<a href="/marusan-site/service/company/">会社案内</a>
+<a href="/marusan-site/company/">会社案内</a>
 </li>
 <li>
-<a href="/marusan-site/service/contact/">お問い合わせ</a>
+<a href="/marusan-site/contact/">お問い合わせ</a>
 </li>
 </ul>
 
 
 <div class="h_recruit">
-<a href="/marusan-site/service/recruit/">求人・採用情報</a>
+<a href="/marusan-site/recruit/">求人・採用情報</a>
 </div>
 </div>
 </nav>
