--- a/staff/index.html
+++ b/staff/index.html
@@ -454,16 +454,16 @@
 </dl>
 <ul>
 <li>
-<a href="/marusan-site/service/service/#transport">重量物運搬据付</a>
+<a href="/marusan-site/service/#transport">重量物運搬据付</a>
 </li>
 <li>
-<a href="/marusan-site/service/service/#dismantling">据付後の設備工事</a>
+<a href="/marusan-site/service/#dismantling">据付後の設備工事</a>
 </li>
 <li>
-<a href="/marusan-site/service/service/#layout">保管・修理・保守</a>
+<a href="/marusan-site/service/#layout">保管・修理・保守</a>
 </li>
 <li>
-<a href="/marusan-site/service/service/#disposal">解体・撤去・廃棄</a>
+<a href="/marusan-site/service/#disposal">解体・撤去・廃棄</a>
 </li>
 </ul>
 
